# intentkernel-architecture

./: AUTHORS.md  LICENSE  README.md
.github/workflows/: aws.yml  rust-reference-ci.yml
docs/: ibp_spec.md  intentkernel_thesis.md  uccs_spec.md
intentkernel/docs/: architecture_overview.md  ikrl_spec.md  token_rfc.md
intentkernel/governance/: principles.md
intentkernel/roadmap/: implementation_plan.md
intentkernel/src/reference/: capability_core.c
src/: Cargo.toml
src/ikrl/: Cargo.toml
src/ikrl/src/: comm.rs  main.rs  monitor.rs  threat.rs
src/ikrl/src/platform/: linux.rs  mod.rs  stub.rs
src/intentd/: Cargo.toml
src/intentd/src/: main.rs
src/intentkernel-sdk/: Cargo.toml
src/intentkernel-sdk/src/: config.rs  lib.rs
src/lsm/: Makefile  intentkernel_lsm.c
src/ransomware-demo/: Cargo.toml
src/ransomware-demo/src/: main.rs
tools/: intentkernel-migrate
